changing visibility control of buttons in different patient tabs to fix a button blinking issue

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,12 @@ form {
   margin-bottom: 1rem;
 }
 
+.floating-button {
+  position: fixed;
+  bottom: 3rem;
+  right: 2rem;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
